<resources>
    <string name="app_name">Contactos</string>
    <string name="adduser">Añadir contacto</string>
    <string name="listuser">Lista de contactos</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etEmail">Correo electrónico</string>
    <string name="etEmail2">Email</string>
    <string name="etTelefono">Teléfono</string>
    <string name="call">Llamar</string>
    <string name="titulo_toolbar">Guardar contacto</string>
    <string name="imagen">Imagen</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="close">Cerrar</string>
</resources>